[package]
name = "sbmp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
downcast-rs = "2.0.1"
itertools = "0.14.0"
lazy_static = "1.5.0"
nalgebra = "0.33.2"
rand = "0.8.0"
statrs = "0.18.0"
thiserror = "2.0.12"
tracing = "0.1.41"

[dependencies.sbmp_derive]
path = "sbmp_derive"
